--- a/miniprogram/pages/bdmt_choose_race/index.wxml
+++ b/miniprogram/pages/bdmt_choose_race/index.wxml
@@ -4,7 +4,7 @@
     <block wx:for="{{raceMainTypeTabList}}" wx:for-item="tabItem" wx:key="tabItem">
       <van-tab title="{{tabItem.raceMainTypeName}}">
 
-        <block wx:for="{{raceSchemeList}}" wx:for-item="raceSchemeItem" wx:key="raceSchemeItem">
+        <block wx:for="{{tempSchemeList}}" wx:for-item="raceSchemeItem" wx:key="raceSchemeItem">
           <race-scheme-card raceSchemeItem="{{raceSchemeItem}}"></race-scheme-card>
         </block>
 
