--- a/miniprogram/components/race-scheme-card/race-scheme-card.less
+++ b/miniprogram/components/race-scheme-card/race-scheme-card.less
@@ -7,8 +7,10 @@
 
 .card-container {
   width: calc(100% - 40rpx);
+  height: 100%;
   background: #f0efef;
-
+  margin-left: 20rpx;
+  margin-top: 20rpx;
   margin-bottom: 20rpx;
   border-radius: 30rpx;
   overflow: hidden;
@@ -28,7 +30,7 @@
   }
 
   .box-right {
-    flex: 1;
+    flex: 2;
     align-items: center;
     align-self: center;
     background-color: bisque;
