--- a/miniprogram/pages/bdmt_home/index.less
+++ b/miniprogram/pages/bdmt_home/index.less
@@ -1,4 +1,6 @@
 /* pages/bdmt_home/index.wxss */
-.card-container{
-  margin-bottom: 130rpx;
+
+.scroll-view-box {
+  height: calc(100vh - 115rpx - 44rpx - 44rpx);
+
 }
