--- a/miniprogram/components/race-scheme-card/race-scheme-card.wxml
+++ b/miniprogram/components/race-scheme-card/race-scheme-card.wxml
@@ -8,5 +8,5 @@
     <text decode>&nbsp;&nbsp;&nbsp;&nbsp;</text>
     <text style="color: blue;">{{raceSchemeItem.raceScheme}}示例</text>
   </view>
-  <button class="box-right" bind:tap="cilckLaunch" mark:raceMainType="{{raceSchemeItem.raceMainType}}">发起</button>
+  <button class="box-right" type="primary" bind:tap="cilckLaunch" mark:raceMainType="{{raceSchemeItem.raceMainType}}">发起</button>
 </view>
