tab跳转到其他tab并且渲染数据

--- a/miniprogram/components/mainrace-referee/race-referee.less
+++ b/miniprogram/components/mainrace-referee/race-referee.less
@@ -10,11 +10,13 @@
   display: flex;
   flex-direction: row;
 }
-
-.referee-box{
-  padding-bottom: 80rpx;
-  .referee-item-box{
-    padding: 20rpx;
-    background-color:#fff;
+.scroll-view-box {
+  height: calc(100vh - 80rpx - 44rpx - 44rpx);
+  .referee-box{
+    
+    .referee-item-box{
+      padding: 20rpx;
+      background-color:#fff;
+    }
   }
 }
