--- a/miniprogram/components/mainrace-referee/race-referee.less
+++ b/miniprogram/components/mainrace-referee/race-referee.less
@@ -10,13 +10,36 @@
   display: flex;
   flex-direction: row;
 }
-.scroll-view-box {
-  height: calc(100vh - 80rpx - 44rpx - 44rpx);
-  .referee-box{
-    
-    .referee-item-box{
+
+.referee-container{
+  .scroll-view-box {
+    height: calc(100vh - 80rpx - 44rpx - 44rpx);
+    .referee-box{
       padding: 20rpx;
-      background-color:#fff;
+      .referee-item-box{
+        padding: 20rpx;
+        margin-top: 10rpx;
+        background-color:#F5F5F5;
+        border-radius: 15rpx;
+  
+        align-items: center;
+      }
+
+    }
+  }
+
+  .bottom-box {
+    width: 100%;
+    height: 80rpx;
+    position: fixed;
+    bottom: 0rpx;
+    background-color: #F5FFFA;
+  
+    .button-action{
+      display: flex;
+      justify-content: space-around;
     }
   }
 }
+
+
