--- a/miniprogram/pages/bdmt_race_applicants/index.less
+++ b/miniprogram/pages/bdmt_race_applicants/index.less
@@ -1,7 +1,4 @@
 /* pages/bdmt_race_applicants/index.wxss */
-page{
-  background-color: whitesmoke;
-}
 
 
 .flex-column {
@@ -14,25 +11,38 @@ page{
   flex-direction: row;
 }
 
-.player-box{
-  padding-bottom: 80rpx;
-  .palyer-item-box{
-    padding: 20rpx;
-    background-color:#fff;
+.applicants-container{
+  background-color: #F5F5F5;
+
+  .scroll-view-box {
+    height: calc(100vh - 80rpx);
+    .player-box{
+
+      .palyer-item-box{
+        padding: 20rpx;
+        // background-color:#F5F5F5;
+        align-items: center;
+      }
+    }
   }
-}
 
-
-
-.bottom-box {
-  width: 100%;
-  position: fixed;
-  bottom: 0rpx;
-  background-color: #F5FFFA;
-
-  .button-action{
-    display: flex;
-    justify-content: space-around;
-  }
+  .bottom-box {
+    width: 100%;
+    height: 80rpx;
+    position: fixed;
+    bottom: 0rpx;
+    background-color: #F5FFFA;
   
+    .button-action{
+      display: flex;
+      justify-content: space-around;
+    }
+  }
 }
+
+
+
+
+
+
+
