--- a/miniprogram/pages/bdmt_mine/index.wxml
+++ b/miniprogram/pages/bdmt_mine/index.wxml
@@ -10,7 +10,7 @@
     <text>{{userInfo.nickName}}</text>
     <image style="width: 30rpx;height: 30rpx;" src="{{Trans.userGenderTrans(userInfo.gender)}}" mode="aspectFit" />
     <text>{{Trans.levelTrans(userInfo.level)}}</text>
-    <image style="width: 30rpx;height: 30rpx;" src="../../assets/icon/edit.png" mode="aspectFit" />
+    <image style="width: 30rpx;height: 30rpx;" src="../../assets/icon/edit.png" mode="aspectFit" bind:tap="toEditUserInfo"/>
   </view>
 
   <!--战绩总览-->
@@ -36,7 +36,7 @@
 
   <!-- 功能 -->
   <view class="function-box">
-    <view class="flex-column inner-item">
+    <view class="flex-column inner-item" bind:tap="toRaceHistory">
       <image style="width: 80rpx;height: 80rpx;" src="/assets/icon/record_history.png" mode="aspectFill" />
       <text>历史战绩</text>
     </view>
