--- a/miniprogram/pages/bdmt_race_history/index.wxml
+++ b/miniprogram/pages/bdmt_race_history/index.wxml
@@ -1,2 +1,42 @@
 <!--pages/bdmt_race_history/index.wxml-->
-<text>历史战绩</text>
+<wxs module="Trans" src="../../utils/state_trans.wxs"></wxs>
+<view class="box">
+  <scroll-view scroll-y refresher-enabled="{{canRefresherEnable}}" show-scrollbar="{{false}}" bindrefresherrefresh="refresh" refresher-triggered="{{triggered}}" bind:scroll="onScroll" class="scroll-view-box">
+    <block wx:for="{{tempBattles}}" wx:for-item="battle" wx:key="bid">
+
+      <view class="battle-box flex-row j_cs">
+        <!--组1-->
+        <view class="flex-column">
+          <view class="flex-row">
+            <!--头像-->
+            <avatar-circle mark:uid="{{battle.player1.uid}}" avatarUrl="{{battle.player1.avatarUrl}}" />
+            <avatar-circle wx:if="{{battle.player2}}" avatarUrl="{{battle.player2.avatarUrl}}" />
+          </view>
+          <!--昵称-->
+          <view class="text-container">{{battle.player1.nickName}} {{battle.player2!=undefined?"&":""}} {{battle.player2.nickName}}</view>
+        </view>
+
+        <view>VS</view>
+
+        <!--组2-->
+        <view class="flex-column">
+          <view class="flex-row">
+            <!--头像-->
+            <avatar-circle mark:uid="{{battle.player3.uid}}" avatarUrl="{{battle.player3.avatarUrl}}" />
+            <avatar-circle wx:if="{{battle.player2}}" mark:uid="{{battle.player4.uid}}" avatarUrl="{{battle.player4.avatarUrl}}" />
+          </view>
+          <!--昵称-->
+          <view class="text-container">{{battle.player3.nickName}} {{battle.player4!=undefined?"&":""}} {{battle.player4.nickName}}</view>
+        </view>
+
+        <!--场次/比分-->
+        <view class="flex-column" mark:battleModel="{{battle}}">
+          <view>第{{battle.roundNum}}场</view>
+          <view>{{battle.firstPartnerScore}} : {{battle.secondPartnerScore}}</view>
+          <view>{{Trans.raceBattleStateTrans(battle.battleState)}}</view>
+        </view>
+      </view>
+    </block>
+
+  </scroll-view>
+</view>
