--- a/miniprogram/pages/bdmt_race_history/index.less
+++ b/miniprogram/pages/bdmt_race_history/index.less
@@ -22,7 +22,7 @@
 
   .scroll-view-box {
 
-    height: calc(100vh - 80rpx - 44rpx - 44rpx);
+    height: calc(100vh - 5rpx);
     // height: 100vh;
     // margin-bottom: 80rpx;
 
